--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 name: "Sync GitHub stars with Raindrop"
 on:
+  workflow_dispatch:
   schedule:
     # Runs every hour at minute 0
     - cron: "0 * * * *"
