--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: "Sync GitHub stars with Raindrop"
 on:
   workflow_dispatch:
   schedule:
-    # Runs every hour at minute 0
-    - cron: "0 * * * *"
+    # Runs every day at 10:00
+    - cron: "0 10 * * *"
 # on:
 #   push:
 #     branches: [main]
